--- a/01_kestra_pipelines/gcp_kv.yaml
+++ b/01_kestra_pipelines/gcp_kv.yaml
@@ -6,7 +6,7 @@ tasks:
     type: io.kestra.plugin.core.kv.Set
     key: GCP_PROJECT_ID
     kvType: STRING
-    value: white-site-353019 # project id
+    value: project_id # placeholder
 
   - id: gcp_location
     type: io.kestra.plugin.core.kv.Set
@@ -18,10 +18,10 @@ tasks:
     type: io.kestra.plugin.core.kv.Set
     key: GCP_BUCKET_NAME
     kvType: STRING
-    value:  de-zoomcamp-project-movies # bucket_name
+    value:  de-zoomcamp-project-movies
 
   - id: gcp_dataset
     type: io.kestra.plugin.core.kv.Set
     key: GCP_DATASET
     kvType: STRING
-    value: movies_and_shows_all # schema name
+    value: movies_and_shows_all
